--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
     <properties>
         <java.version>11</java.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
