--- a/ch06/taco-cloud6-config/src/main/resources/application.yaml
+++ b/ch06/taco-cloud6-config/src/main/resources/application.yaml
@@ -28,9 +28,9 @@ taco:
     sort: true
 
 logging:
-  file:
-    path: /var/logs/ #TODO
-    name: TacoCloud.log
+#  file:
+#    path: /var/logs/ #TODO
+#    name: TacoCloud.log
   level:
     root: info
     org.springframework.security: debug
