--- a/ch07/taco-cloud7-restclient/pom.xml
+++ b/ch07/taco-cloud7-restclient/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.example</groupId>
     <artifactId>taco-cloud7-restclient</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>tacocloud-restclient</name>
+    <name>taco-cloud7-restclient</name>
     <description>Taco Cloud REST client</description>
     <properties>
         <java.version>11</java.version>
