--- a/ch08/taco-cloud8-secure-api/src/main/resources/application.yaml
+++ b/ch08/taco-cloud8-secure-api/src/main/resources/application.yaml
@@ -21,6 +21,12 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://localhost:9000/oauth2/jwks
+
   data:
     rest:
 #      base-path: /data-api
