--- a/ch09/taco-cloud9-messaging/pom.xml
+++ b/ch09/taco-cloud9-messaging/pom.xml
@@ -23,10 +23,14 @@
 <!--            <artifactId>spring-boot-starter-artemis</artifactId>-->
 <!--        </dependency>-->
 
-
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
+<!--        </dependency>-->
+        
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
