--- a/ch17/taco-cloud17-jmx/pom.xml
+++ b/ch17/taco-cloud17-jmx/pom.xml
@@ -8,6 +8,9 @@
         <version>2.7.13</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <packaging>war</packaging>
+
     <groupId>com.example</groupId>
     <artifactId>taco-cloud17-jmx</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -17,6 +20,12 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -111,6 +120,9 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <image>
+                        <name>tacoCloud/${project.artifactId}:${project.version}</name>
+                    </image>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
